--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@
 	padding: 5px 5px;
 	margin: 5px 5px;
 	width: 250px;
-	height: 400px;
+	height: 450px;
 	border-radius: 10px;
 	border: 1px solid #eee;
 	overflow: hidden;
@@ -70,9 +70,9 @@
 	cursor: pointer;
 }
 
-.login-logout {
+.login-btn {
 	cursor: pointer;
-	padding: 0px 20px;
+	padding: 5px 20px;
 }
 
 .shimmer-container {
@@ -88,4 +88,18 @@
 	height: 400px;
 	border-radius: 10px;
 	background-color: #eee;
+}
+
+.item-row {
+	width: 600px;
+	height: 30px;
+	background-color: #eee;
+	padding: 5px 20px 0px 20px;
+	margin-top: 2px;
+	border-radius: 5px;
+}
+
+.item-details {
+	display: flex;
+	justify-content: space-between;
 }
